--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Portfolio - Chamal Fernando</title>
-    <meta name="description" content="Computer Science student and Full-Stack Developer specializing in modern web and mobile applications" />
+    <meta name="description" content="Computer Science graduate and Full-Stack Developer specializing in modern web and mobile applications" />
     <meta name="author" content="Full Stack Developer" />
 
     <meta property="og:title" content="Portfolio - Chamal Fernando" />
