--- a/index.html
+++ b/index.html
@@ -3,18 +3,19 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Portfolio - Chamal Fernando</title>
+    <title>Chamal Fernando</title>
+    <link rel="icon" type="icon/ico" href="/name.ico" />
     <meta name="description" content="Computer Science graduate and Full-Stack Developer specializing in modern web and mobile applications" />
     <meta name="author" content="Full Stack Developer" />
 
-    <meta property="og:title" content="Portfolio - Chamal Fernando" />
+    <meta property="og:title" content="Chamal Fernando" />
     <meta property="og:description" content="Computer Science student and Full-Stack Developer specializing in modern web and mobile applications" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <!-- <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" /> -->
 
-    <meta name="twitter:card" content="summary_large_image" />
+    <!-- <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" /> -->
   </head>
 
   <body>
